<resources>

    <!-- ActionBar Title -->

    <string name="app_name">Tasked</string>
    <string name="statistics">Statistics</string>
    <string name="dashboard">Dashboard</string>
    <string name="snoozed">Snoozed</string>
    <string name="completed">Completed</string>
    <string name="glance">Glance</string>
    <string name="planner">Planner</string>
    <string name="taskList">Task list</string>
    <string name="settings">Settings</string>
    <string name="contact">Help &amp; feedback</string>

    <!-- Filters -->

    <string name="clear_filter">RESET FILTERS</string>

    <string name="main_filters">Main filters</string>
        <string name="starred">Starred</string>
        <string name="dueToday">Due today</string>
        <string name="dueThisWeek">Due this week</string>

    <string name="list_filters">Grouped filters</string>
        <string name="by_task_list">By task list</string>
        <string name="by_label">By label</string>
        <string name="by_location">By location</string>

    <string name="reorder_items">Order list</string>
        <string name="alphabetically">Alphabetical</string>
        <string name="due_date">Due date</string>
        <string name="custom_order">Custom order</string>

    <!-- Contact developer -->

    <string name="developer_email" translatable="false">achillessoftware@gmail.com</string>
    <string name="subject_email">Tasked - Bug/Feature/Request</string>
    <string name="send_email">Contact the developer</string>

    <!-- ActionBar Icons -->

    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="search_tasks">Search tasks</string>
    <string name="complete">Complete</string>
    <string name="delete">Delete</string>

    <!-- Generic -->

    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- FAB menu and childs -->

    <string name="shareList">Share list</string>
    <!--<string name="addMultiTasks">Add multiple task</string>         DEPRECATED -->
    <string name="addLabel">Add label</string>
    <string name="addTask">Add task</string>
    <string name="addList">Add list</string>

    <!-- Navigation Drawer -->

    <string name="task_list_quick_access">Task list quick access</string>

    <!--<string name="navigation_drawer_default_image_description">Primary color with app icon</string>-->
    <!--<string name="navigation_drawer_user_image_description">Google Account cover image</string>-->
    <!--<string name="navigation_drawer_expand_image_description">Expand to switch accounts</string>-->
    <!--<string name="placeholder_email_address" translatable="false">-->
        <!--really_long_email_address_string_to_ensure_proper_overflow_formatting@gmail.com-->
    <!--</string>-->

    <!--TaskList toString-->

    <string name="listName">List name:</string>
    <string name="tasks">Tasks:</string>
    <string name="task_done">DONE</string>

    <!--Task Creation Fragment-->

    <string name="title">Title</string>
    <string name="type_title">Type title&#8230;</string>
    <string name="ask_for_title">Introduce the title</string>

    <string name="select_task_list">Select a task list</string>
    <string name="select_labels">Select labels</string>

    <string name="ask_for_description">Introduce the description</string>
    <string name="description">Description</string>

    <string name="discard_changes">Discard changes?</string>
    <string name="discard">Discard</string>

    <string name="alarm">Alarm</string>
    <string name="location">Location</string>
    <string name="labels">Labels</string>
    <string name="favourite">Favourite</string>

    <string name="expand">Expand</string>
    <string name="addLocation">Add location</string>

    <!-- Error report -->

    <string name="error_report_tasked">Error report - Tasked</string>
    <string name="error_report_taken">Error report taken:</string>
    <string name="error_report_send">Send error report?</string>
    <string name="error_trace_collected">New Trace collected :</string>
    <string name="error_collected_on">"Error Report collected on : "</string>
    <string name="error_information">Information :</string>
    <string name="error_stack">Stack : \n</string>
    <string name="error_cause">Cause : \n</string>
    <string name="error_report_end">****  End of current Report ***</string>

    <!-- Place Picker -->

    <string name="launching_place_picker">Launching Place Picker</string>
    <string name="PlacePickerFailed">Google Place Picker Failed\nTell Dev to Upgrade Plan\nFrom the Application Drawer</string>
    <string name="GooglePlayServicesUnavailable">Google Play Services - Not Available</string>

    <string name="blank"/>

    <!-- Location Pickers -->

    <string name="set_location">Set location</string>
    <string name="as_place">As place</string>
    <string name="as_note">As note</string>
    <string name="ask_for_location">Introduce the location</string>

    <!-- Dashboard -->

    <string name="warning_item_access">Problems accessing item</string>
    <string name="task_not_saved">Task not saved</string>
    <string name="nothing_found">Nothing found</string>
    <string name="please_connect_internet">Please Connect to Internet</string>
    <string name="task_due">"Tasks due: "</string>


</resources>
