<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_snoozed"
            android:icon="@drawable/ic_time_clean"
            android:title="@string/snoozed" />
        <item
            android:id="@+id/nav_completed"
            android:icon="@drawable/ic_done"
            android:title="@string/completed" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_glance"
            android:icon="@drawable/ic_calendar_list"
            android:title="@string/glance" />
        <item
            android:id="@+id/nav_planner"
            android:icon="@drawable/ic_view_carousel"
            android:title="@string/planner" />
    </group>

    <item android:title="@string/taskList">
        <menu>
            <item
                android:icon="@drawable/ic_done"
                android:title="List one" />
            <item
                android:icon="@drawable/ic_done_all"
                android:title="Super extra long list" />
            <item
                android:icon="@drawable/ic_done"
                android:title="List one" />
            <item
                android:icon="@drawable/ic_done_all"
                android:title="Super extra long list" />
            <item
                android:icon="@drawable/ic_done"
                android:title="List one" />
            <item
                android:icon="@drawable/ic_done_all"
                android:title="Super extra long list" />
        </menu>
    </item>

</menu>
